--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdk-ts",
+  "name": "perennial-sdk-ts",
   "version": "1.0.0",
   "description": "A typescript library for interacting with Perennial V2 markets",
   "main": "dist/index.js",
