--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A typescript library for interacting with Perennial V2 markets",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
