--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perennial-sdk-ts",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A typescript library for interacting with Perennial V2 markets",
   "main": "./dist/_cjs/index.js",
   "module": "./dist/_esm/index.js",
@@ -8,6 +8,8 @@
   "typings": "./dist/_types/index.d.ts",
   "type": "module",
   "scripts": {
+    "publish": "npm run build && npm bump && npm publish",
+    "bump": "npm version patch --force",
     "clean": "rimraf dist/_esm dist/_cjs dist/_types",
     "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run build:types",
     "build:cjs": "tsc --module commonjs --outDir ./dist/_cjs --removeComments --verbatimModuleSyntax false && printf '{\"type\":\"commonjs\"}' > ./dist/_cjs/package.json",
