--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build:cjs": "tsc --module commonjs --outDir ./dist/_cjs --removeComments --verbatimModuleSyntax false && printf '{\"type\":\"commonjs\"}' > ./dist/_cjs/package.json",
     "build:esm": "tsc --module es2015 --outDir ./dist/_esm && printf '{\"type\": \"module\",\"sideEffects\":false}' > ./dist/_esm/package.json",
     "build:types": "tsc --module esnext --declarationDir ./dist/_types --emitDeclarationOnly --declaration --declarationMap",
+    "gen:gql-typings": "graphql-codegen --config graph-codegen.ts",
+    "gen:gql-typings:watch": "graphql-codegen --watch --config graph-codegen.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -25,6 +27,9 @@
   "author": "l3wi",
   "license": "MIT",
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "dotenv": "^16.3.1",
     "esno": "^0.17.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
@@ -32,6 +37,8 @@
   "dependencies": {
     "@pythnetwork/pyth-evm-js": "^1.29.0",
     "date-fns": "^2.30.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "viem": "^1.12.2"
   }
 }
