--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     // Skip type checking for node modules                    
     "skipLibCheck": true                           
   },
-  "exclude": ["examples", "dist"]
+  "exclude": ["examples", "dist", "graph-codegen.ts"]
 }
